# djay-audio-loader

./: .gitignore  Cargo.toml  README.md  build.rs
.kiro/logs/: 2026-04-20.djay-load-cli-research.md  2026-04-20.drop-zone-verification.md  2026-04-20.swinsian-selection-verification.md  2026-06-20.tooltip-axwindows-investigation.md
.kiro/scripts/: drag-file-to-point.swift  dump-all-elements.applescript  dump-deep-pane.applescript  dump-right-pane.applescript  dump-swinsian-windows.applescript  dump-table-hierarchy.applescript  dump-table-parent.applescript  find-waveform-elements.applescript  get-selected-track.swift  verify-artwork-extraction.sh  verify-artwork.rs  verify-axuielement.applescript  verify-cgevent-drag.swift  verify-itunes-selection-2.swift  verify-itunes-selection-3.swift  verify-itunes-selection.swift  verify-swinsian-selection-2.applescript  verify-swinsian-selection-3.applescript  verify-swinsian-selection-4.applescript  verify-swinsian-selection-5.applescript  verify-swinsian-selection-6.swift  verify-swinsian-selection.applescript  verify-swinsian-selection.swift
.kiro/specs/: requirements.md
.kiro/steering/: git.md  github.md  project.md
docs/adr/: 20260420-001-track-detection-via-accessibility-api.md  20260420-002-drag-and-drop-via-cgevent.md  20260421-001-helper-binary-with-global-hotkey.md  20260421-002-track-source-priority.md  20260429-001-unified-logging-with-env-logger.md  20260430-001-error-notification-via-osascript.md  20260501-001-file-path-existence-check.md  20260517-001-success-and-error-notification.md  20260530-001-session-log-markdown-output.md  20260620-001-filter-axhelptag-from-axwindows.md  20260626-001-drag-start-position-based-on-scroll-area.md  20260628-001-ndp-publish-integration.md
src/: cli.rs  drag.rs  logger.rs  main.rs  notify.rs  session_log.rs  track.rs
src/helper/: config.rs  hotkey.rs  main.rs
tmp/: test.http
