[package]
name = "djay-audio-loader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drag-into-djay"
path = "src/main.rs"

[[bin]]
name = "djay-audio-loader-helper"
path = "src/helper/main.rs"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }

# Accessibility / Core Foundation (AXUIElement 系)
core-foundation = "0.10"

# CGEvent によるドラッグ&ドロップ
core-graphics = "0.25"

# NSRunningApplication (isActive, bundleIdentifier)
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

# エラーハンドリング
anyhow = "1.0"
