[package]
name = "djay-audio-loader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drag-into-djay"
path = "src/main.rs"

[[bin]]
name = "djay-audio-loader-helper"
path = "src/helper/main.rs"

[[bin]]
name = "verify-artwork"
path = ".kiro/scripts/verify-artwork.rs"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }

# Accessibility / Core Foundation (AXUIElement 系)
core-foundation = "0.10"

# CGEvent によるドラッグ&ドロップ
core-graphics = "0.25"

# NSRunningApplication (isActive, bundleIdentifier)
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

# JSON シリアライズ (track_info の stdout 出力)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# エラーハンドリング
anyhow = "1.0"

chrono = { version = "0.4.44", features = ["now"] }
env_logger = "0.11"
# ログ出力
log = "0.4"

# アートワーク抽出（将来の拡張用）
id3 = "1.13"
image = "0.25.10"
mp4ameta = "0.11"
